helm/charts/atlas/traffic-deaths/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-deaths
  namespace: atlas
  labels:
    app.kubernetes.io/name: traffic-deaths
    app.kubernetes.io/part-of: atlas
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 3003
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: traffic-deaths
